--- a/app/src/main/res/layout/horarios.xml
+++ b/app/src/main/res/layout/horarios.xml
@@ -10,6 +10,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
+        android:fontFamily="@font/sf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
